@@ -1,3 +1,8 @@
+2008-02-25  Mark Ellis  <mark@mpellis.org.uk>
+
+	* manpage for logging functions
+	* update to *info* manpage
+
 2008-02-20  Mark Ellis  <mark@mpellis.org.uk>
 
 	* ignore case of device host name with odccm and hal
